# rlm_memcache

./: .gitignore  COPYING  Makefile.am  README  acct.txt  config.h.in  configure.ac  rlm_memcache.c
etc/: memcache
